--- a/Web/public/main.styles.css
+++ b/Web/public/main.styles.css
@@ -83,11 +83,22 @@ a {
     align-items: center;
     justify-content: center;
 }
+
 .highlight-link {
-    color: var(--join-indigo) !important; 
+    color: var(--join-indigo) !important;
     font-size: 15px;
     font-weight: bold;
     text-decoration: none;
+}
+
+.button {
+    border: none;
+    color: var(--join-white);
+    width: 50%;
+    text-align: center;
+    background-color: var(--join-indigo);
+    border-radius: 20px;
+    padding: 8px 0;
 }
 
 
@@ -111,6 +122,7 @@ a {
         border-bottom-right-radius: 40px;
         border-bottom-left-radius: 40px;
     }
+
     .auth-other {
         margin-top: 5vh !important;
         height: 80vh !important;
@@ -173,6 +185,7 @@ a {
     display: flex !important;
     align-items: center !important;
 }
+
 .agree-box label {
     font-size: 16px !important;
     font-weight: normal !important;
@@ -198,6 +211,7 @@ a {
     border-radius: 20px;
     padding: 8px 0;
 }
+
 
 .auth-form .already {
     font-size: 14px;
